Fix the navigation on mobile

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,10 +2,6 @@
 	padding-bottom: 2.313em;
 }
 
-.branding-container {
-
-}
-
 .site-title {
 	margin: 0;
 	line-height: 1;
