--- a/style.css
+++ b/style.css
@@ -731,14 +731,10 @@ a:hover, a:active {
   width: 100%;
   border: 3px solid #eee;
   clear: none;
-  display: none;
+  display: block;
   padding: 0.75em;
   height: 2.75em;
   position: relative;
-}
-
-.js .menu-toggle {
-  display: block;
 }
 
 .menu-toggle:hover, .menu-toggle:focus {
